--- a/web/WebContent/about.xhtml
+++ b/web/WebContent/about.xhtml
@@ -43,8 +43,8 @@
 							icon="fa fa-fw fa-arrow-circle-o-left" outcome="main" />
 						<p:dialog id="termsDialog" widgetVar="termsDlg" showEffect="fade"
 							position="top" positionType="absolute" closable="false"
-							showHeader="false" modal="true" width="600px" height="400px"
-							draggable="false" resizable="false" style="margin-top: 65px;">
+							showHeader="false" modal="true" width="auto" height="auto"
+							draggable="false" resizable="false" styleClass="dialogFrame">
 							<div class="dialog">
 								<br /> <b><p:outputLabel value="#{msg.page_terms}" /></b> <br />
 								<h:outputText value="#{msg.terms_text}" />
