--- a/web/WebContent/contactus.xhtml
+++ b/web/WebContent/contactus.xhtml
@@ -75,9 +75,10 @@
 							</p:panelGrid>
 						</div>
 						<p:dialog header="#{msg.contact_result}" widgetVar="result"
-							modal="true" resizable="false" responsive="true"
-							showHeader="false" draggable="false" position="top"
-							style="margin-top: 65px;">
+							modal="true" resizable="false" showHeader="false"
+							draggable="false" position="top" positionType="relative"
+							closable="false" width="auto" height="auto"
+							styleClass="dialogFrame">
 							<div class="dialog">
 								<p:panelGrid layout="grid" styleClass="ui-noborder"
 									id="paneldialog" columns="1">
