--- a/web/WebContent/result-fail.xhtml
+++ b/web/WebContent/result-fail.xhtml
@@ -21,14 +21,14 @@
 					actionListener="#{contractView.closeResultFailAction}" />
 				<p:dialog id="resultDialog" widgetVar="resultDlg" showEffect="fade"
 					position="top" positionType="absolute" closable="false"
-					showHeader="false" modal="true" width="600px" height="400px"
-					draggable="false" visible="true" resizable="false"
-					style="margin-top: 65px;">
+					showHeader="false" modal="true" width="auto" height="auto"
+					visible="true" draggable="false" resizable="false"
+					styleClass="dialogFrame">
 					<div class="dialog">
-						<br /> <h:outputText value="DigiDeal ##{contractView.sourceName}" />
-						<br /><br />
-						<b><p:outputLabel value="#{msg.contact_send_fail}" /></b>
-						<br />				
+						<br />
+						<h:outputText value="DigiDeal ##{contractView.sourceName}" />
+						<br /> <br /> <b><p:outputLabel
+								value="#{msg.contact_send_fail}" /></b> <br />
 					</div>
 					<div style="float: right;">
 						<br /> <br />
