--- a/web/WebContent/result.xhtml
+++ b/web/WebContent/result.xhtml
@@ -21,9 +21,9 @@
 					actionListener="#{contractView.closeResultAction}" />
 				<p:dialog id="resultDialog" widgetVar="resultDlg" showEffect="fade"
 					position="top" positionType="absolute" closable="false"
-					showHeader="false" modal="true" width="600px" height="400px"
-					draggable="false" visible="true" resizable="false"
-					style="margin-top: 65px;">
+					showHeader="false" modal="true" width="auto" height="auto"
+					visible="true" draggable="false" resizable="false"
+					styleClass="dialogFrame">
 					<div class="dialog">
 						<br /> <b><p:outputLabel value="#{msg.page_result_title}" /></b>
 						<br />
