--- a/web/WebContent/robot.xhtml
+++ b/web/WebContent/robot.xhtml
@@ -34,40 +34,35 @@
 								layout="grid" styleClass="ui-panelgrid-blank">
 								<p:panel>
 									<h:outputLabel class="text-justify"
-										value="#{msg.robot_text_1}&lt;br /&gt;#{msg.robot_right_arrow}"
-										escape="false" />
+										value="#{msg.robot_text_1}&lt;br /&gt;" escape="false" />
 								</p:panel>
 								<p:panel>
 									<h:outputLabel class="text-justify"
-										value="#{msg.robot_text_2} &lt;br /&gt;#{msg.robot_right_arrow}"
-										escape="false" />
+										value="#{msg.robot_text_2} &lt;br /&gt;" escape="false" />
 								</p:panel>
 								<p:panel>
 									<h:outputLabel class="text-justify"
-										value="#{msg.robot_text_3}&lt;br /&gt;#{msg.robot_down_arrow}"
-										escape="false" />
+										value="#{msg.robot_text_3}&lt;br /&gt;" escape="false" />
 								</p:panel>
+								<p:panel>
+									<h:outputLabel class="text-justify"
+										value="#{msg.robot_text_4}&lt;br /&gt;" escape="false" />
+								</p:panel>
+								<iframe src="https://player.vimeo.com/video/348582241"
+									width="320" height="150" frameborder="0"
+									allow="autoplay; fullscreen"></iframe>
 								<h:outputLabel value="" />
-								<h:graphicImage width="200" value="../images/robot.png" />
 								<p:panel>
 									<h:outputLabel class="text-justify"
-										value="#{msg.robot_text_4} &lt;br /&gt;#{msg.robot_down_arrow}"
-										escape="false" />
+										value="#{msg.robot_text_5}&lt;br /&gt;" escape="false" />
 								</p:panel>
 								<p:panel>
 									<h:outputLabel class="text-justify"
-										value="#{msg.robot_text_7}&lt;br /&gt;#{msg.robot_finish}"
-										escape="false" />
+										value="#{msg.robot_text_6}&lt;br /&gt;" escape="false" />
 								</p:panel>
 								<p:panel>
 									<h:outputLabel class="text-justify"
-										value="#{msg.robot_text_6}&lt;br /&gt;#{msg.robot_left_arrow}"
-										escape="false" />
-								</p:panel>
-								<p:panel>
-									<h:outputLabel class="text-justify"
-										value="#{msg.robot_text_5}&lt;br /&gt;#{msg.robot_left_arrow}"
-										escape="false" />
+										value="#{msg.robot_text_7}&lt;br /&gt;" escape="false" />
 								</p:panel>
 							</p:panelGrid>
 						</div>
