--- a/web/WebContent/about.xhtml
+++ b/web/WebContent/about.xhtml
@@ -22,10 +22,10 @@
 					<h:form>
 						<h2 class="text-primary">#{msg.page_about}</h2>
 						<br />
-<!-- 						<p:panelGrid styleClass="noBorders tr td" columns="1"> -->
-<!-- 							<h:graphicImage width="300" value="../images/digideal.png" /> -->
-<!-- 						</p:panelGrid> -->
-<!-- 						<br /> -->
+						<p:panelGrid styleClass="noBorders tr td" columns="1">
+							<h:graphicImage width="150" value="../images/robot.png" />
+						</p:panelGrid>
+						<br />
 						<h:outputLabel
 							value="#{msg.about_version}#{navigationView.version}" />
 						<br />
