--- a/web/WebContent/form.xhtml
+++ b/web/WebContent/form.xhtml
@@ -86,6 +86,10 @@
 										});
 									</script>
 								</p:panel>
+								<div style="float: right;">
+									<h:outputLabel style="font-size: 14px;" escape="false"
+										value="#{msg.wizard_last}" />
+								</div>
 							</p:tab>
 						</p:wizard>
 
