--- a/web/WebContent/form.xhtml
+++ b/web/WebContent/form.xhtml
@@ -424,7 +424,7 @@
 							<div class="ui-g-12 ui-md-6 ui-lg-3">
 
 								<div style="float: right;">
-									<p:commandButton value="Previsualizar" id="preview"
+									<p:commandButton value="#{msg.btn_preview}" id="preview"
 										actionListener="#{contractView.previewAction}"
 										disabled="#{contractView.previewDisabled}"
 										icon="ui-icon-circle-zoomin"
