--- a/web/WebContent/main.xhtml
+++ b/web/WebContent/main.xhtml
@@ -26,7 +26,7 @@
 									<p class="text-justify" style="font-size: 22px;">#{msg.main_subtitle}</p>
 								</div>
 							</div>
-							<div class="col-md-4">
+							<div>
 								<iframe src="https://player.vimeo.com/video/348582241"
 									width="340" height="160" frameborder="0"
 									allow="autoplay; fullscreen"></iframe>
