--- a/web/WebContent/form.xhtml
+++ b/web/WebContent/form.xhtml
@@ -457,7 +457,7 @@
 						<br />
 						<div style="float: right;">
 							<p:selectOneButton value="Testnet" disabled="true">
-								<f:selectItem itemLabel="Mainet" itemValue="Mainnet"
+								<f:selectItem itemLabel="Mainnet" itemValue="Mainnet"
 									itemDisabled="true" />
 								<f:selectItem itemLabel="Testnet" itemValue="Testnet" />
 							</p:selectOneButton>
