--- a/web/WebContent/faq.xhtml
+++ b/web/WebContent/faq.xhtml
@@ -31,7 +31,7 @@
 							</p:tab>
 							<p:tab title="#{msg.faq_g1_title2}">
 								<h:panelGrid columns="2" cellpadding="10">
-									<h:outputText class="text-justify" value="#{msg.faq_g1_text2}" />
+									<h:outputText class="text-justify" value="#{msg.faq_g1_text2} #{navigationView.feeInUsd})." />
 								</h:panelGrid>
 							</p:tab>
 							<p:tab title="#{msg.faq_g1_title3}">
