--- a/web/WebContent/form.xhtml
+++ b/web/WebContent/form.xhtml
@@ -54,7 +54,7 @@
 									</script>
 								</p:panel>
 							</p:tab>
-							<p:tab title="#{msg.wizard_how_much}" >
+							<p:tab title="#{msg.wizard_how_much}">
 								<p:panel>
 									<div id="how-many" class="ui-g form"></div>
 									<script>
@@ -344,6 +344,16 @@
 									</div>
 								</div>
 
+								<div class="ui-g-12 ui-md-6 ui-lg-3">
+									<div>
+										<h:outputText value="#{msg.form_fee}" />
+									</div>
+									<div>
+										<p:inputText id="fee" styleClass="readonly"
+											value="tBTC #{contractView.fee}" readonly="true" />
+									</div>								
+								</div>
+
 							</div>
 						</p:outputPanel>
 
@@ -465,7 +475,7 @@
 						<p:remoteCommand name="cancelDraft"
 							update="draft,check,preview,paneldialog,panelbar,panelcaptcha"
 							action="#{contractView.cancelDraftAction}" />
-						<p:remoteCommand name="confirmDraft" process="@this" 
+						<p:remoteCommand name="confirmDraft" process="@this"
 							action="#{contractView.confirmDraftAction}">
 						</p:remoteCommand>
 						<p:dialog id="previewDialog" widgetVar="draftDlg"
@@ -509,13 +519,13 @@
 									<botDetect:simpleJsfCaptcha id="captcha"
 										binding="#{contractView.captcha}"
 										rendered="#{contractView.renderSignatures}" />
-									<p:inputText id="captchaCode" 
+									<p:inputText id="captchaCode"
 										style="background-color:#ffffcc;width: 140px;text-transform: uppercase"
 										value="#{contractView.captchaCode}"
 										placeholder="#{msg.form_enter_captcha}"
-										rendered="#{contractView.renderSignatures}" >
+										rendered="#{contractView.renderSignatures}">
 										<p:ajax event="blur" />
-										</p:inputText>
+									</p:inputText>
 								</p:panelGrid>
 								<br />
 							</div>
