--- a/web/WebContent/robot.xhtml
+++ b/web/WebContent/robot.xhtml
@@ -73,7 +73,7 @@
 						<br />
 						<h4>#{msg.robot_fee}</h4>
 						<h:outputLabel class="text-justify"
-							value="#{msg.robot_fee_detail}" />
+							value="#{msg.robot_fee_detail} #{navigationView.feeInUsd})." />						
 						<br />
 						<br />
 						<br />
